Better fix for issue 4495 (HTML panel twisties are vertically misaligned) http://code.google.com/p/fbug/issues/detail?id=4495

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -106,10 +106,6 @@
     display: none;
 }
 
-.cssComputedHeader > .twisty {
-    background-position: 4px 4px !important;
-}
-
 .cssInheritLabel,
 .cssComputedLabel {
     margin-right: 0.25em;
