--- a/extension/skin/classic/html.css
+++ b/extension/skin/classic/html.css
@@ -24,7 +24,6 @@
     width: 14px;
     height: 1em;
     padding: 4px 0;
-    background-position: center center!important;
 }
 
 .nodeChildBox {
